--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.7",
+    "raw-loader": "^4.0.2",
     "three": "^0.171.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
